fix location button search align self

--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@
 
   border: 1px solid;
   border-radius: 1rem;
+  overflow: hidden;
 }
 
 .button__icon {
@@ -294,7 +295,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 0 1rem 1rem 0;
+  align-self: normal;
   background-color: var(--alizarin-crimson);
 }
 
@@ -351,7 +352,7 @@
   font-family: 'Roboto', sans-serif;
 }
 
-@media (min-width: 1261px) {
+@media (min-width: 1280px) {
   .container {
     padding: 1.8rem 18rem;
   }
